# anonfox

./: .gitignore  AGENTS.md  README.md  TODO.md  pyproject.toml  requirements.txt
app/: __init__.py  main.py
app/api/: dependencies.py  routes_depseudonymize.py  routes_health.py  routes_pseudonymize.py  routes_supported_classes.py
app/config/: settings.py
app/detection/: language.py  overlap.py  pipeline.py  registry.py  types.py
app/recognizers/: __init__.py  api_key.py  auth_header_token.py  base.py  bearer_token.py  cloud_access_key_id.py  cloud_credential.py  cloud_secret_key_assignment.py  connection_string.py  email.py  generic_secret.py  jwt.py  oauth_cloud_token.py  package_saas_token.py  person.py  phone.py  private_key.py  private_key_inline.py  session_token.py  webhook_secret.py  webhook_url.py
app/replacement/: __init__.py  placeholders.py  pseudonymizer.py
app/reversal/: __init__.py  depseudonymizer.py
app/schemas/: common.py  requests.py  responses.py
tests/: test_api.py  test_detection_pipeline_secrets.py
