[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "anonfox"
version = "0.1.0"
description = "Reversible FastAPI pseudonymization service for Dutch and English text"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.110.0,<1.0.0",
  "uvicorn>=0.27.0,<1.0.0",
  "pydantic>=2.6.0,<3.0.0",
  "pydantic-settings>=2.1.0,<3.0.0",
]

[project.optional-dependencies]
ner = [
  "spacy>=3.7.0,<4.0.0",
]
dev = [
  "pytest>=8.0.0,<9.0.0",
  "httpx>=0.26.0,<1.0.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
addopts = "-q"
testpaths = ["tests"]

[tool.setuptools.packages.find]
include = ["app*"]
